openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: documentetl
  labels:
    app: documentetl
spec:
  to:
    kind: Service
    name: documentetl
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
